feat: major v1 improvements
